<resources>
    <string name="app_name">Lab 5: MultiScreen Application</string>
    <string name="title">Pizza Time!</string>
    <string name="size1">Small - 5$</string>
    <string name="size2">Medium - 7$</string>
    <string name="size3">Large - 9$</string>
    <string name="option1">Extra Cheese! - 1$</string>
    <string name="option2">Thicc Crust! - 0.50$</string>
    <string name="option3">Pineapple! - 0.25$</string>
    <string name="placeOrder">Place Order!</string>


    <string name="title2">Receipt</string>
    <string name="exit">Return to order</string>
</resources>
