<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07999998" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="Pizza Time!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/pizza" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="77dp"
        android:layout_height="90dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="Pizza Tiem!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/pizza" />

    <RadioGroup
        android:id="@+id/Size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.19999999">

        <RadioButton
            android:id="@+id/size1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@android:color/background_light"
            android:checked="false"
            android:onClick="radioClicked"
            android:text="@string/size1"
            android:textColor="@android:color/background_light"
            tools:layout_editor_absoluteX="62dp"
            tools:layout_editor_absoluteY="139dp" />

        <RadioButton
            android:id="@+id/size2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@android:color/background_light"
            android:checked="false"
            android:onClick="radioClicked"
            android:text="@string/size2"
            android:textColor="@android:color/background_light"
            tools:layout_editor_absoluteX="62dp"
            tools:layout_editor_absoluteY="220dp" />

        <RadioButton
            android:id="@+id/size3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@android:color/background_light"
            android:checked="false"
            android:onClick="radioClicked"
            android:text="@string/size3"
            android:textColor="@android:color/background_light"
            tools:layout_editor_absoluteX="61dp"
            tools:layout_editor_absoluteY="180dp" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/Cheese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:buttonTint="@android:color/background_light"
        android:checked="false"
        android:onClick="onCheckBoxClicked"
        android:text="@string/option1"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="@+id/Size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Size"
        app:layout_constraintTop_toTopOf="@+id/Size"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/Crust"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@android:color/background_light"
        android:checked="false"
        android:onClick="onCheckBoxClicked"
        android:text="@string/option2"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="@+id/Size"
        app:layout_constraintStart_toStartOf="@+id/Cheese"
        app:layout_constraintTop_toBottomOf="@+id/Cheese"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/Pineapple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@android:color/background_light"
        android:checked="false"
        android:onClick="onCheckBoxClicked"
        android:text="@string/option3"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="@+id/Size"
        app:layout_constraintStart_toStartOf="@+id/Crust"
        app:layout_constraintTop_toBottomOf="@+id/Crust"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/Order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:onClick="placeOrder"
        android:text="@string/placeOrder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView" />

    <TextView
        android:id="@+id/Total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/Order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>